--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: Outfit;
+  src: url(https://fonts.google.com/specimen/Outfit);
+}
 .attribution { 
   font-size: 11px; 
   text-align: center; 
@@ -17,7 +21,7 @@ p{
   text-align: center;
   padding:0 20px ;
 }
-.box {
+main {
   height:98vh;
   width: 100vw;
   background:hsl(212, 45%, 89%);
@@ -41,8 +45,8 @@ p{
   font-size: 15px;
   font-weight: 400;
 }
-.bold{
-  font-size: 20px;
+h1{
+  font-size: 22px;
   font-weight: 700;
 }
 
